[gd_scene load_steps=7 format=2]

[ext_resource path="res://maps/chapter4/tilemap_snowy_lands.tres" type="TileSet" id=1]
[ext_resource path="res://tileset/scripts/set_camera_limit.gd" type="Script" id=2]
[ext_resource path="res://maps/chapter4/chapter4-depression_dungeon.gd" type="Script" id=3]
[ext_resource path="res://objects/obj_dungeon_door/obj_dungeon_door.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/entity_mc/entity_mc.tscn" type="PackedScene" id=5]
[ext_resource path="res://effects/lighting/radial_lighting.png" type="Texture" id=6]

[node name="chapter4-depression_dungeon" type="Node2D"]
script = ExtResource( 3 )

[node name="tilemap_snowy_lands" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 0, 10, 0, 1, 7, 131073, 2, 7, 131073, 3, 7, 131073, 4, 7, 131073, 5, 7, 131073, 6, 7, 131073, 7, 7, 131073, 8, 7, 131073, 9, 7, 131073, 10, 7, 131073, 11, 7, 131073, 12, 7, 131073, 13, 7, 131073, 14, 7, 131073, 15, 7, 131073, 16, 7, 131073, 17, 7, 131073, 18, 7, 131073, 19, 10, 1, 65536, 7, 65538, 65537, 15, 0, 65538, 15, 1, 65539, 15, 1, 65540, 15, 1, 65541, 15, 1, 65542, 15, 1, 65543, 15, 1, 65544, 15, 1, 65545, 15, 1, 65546, 15, 1, 65547, 15, 1, 65548, 15, 1, 65549, 15, 1, 65550, 15, 1, 65551, 15, 1, 65552, 15, 1, 65553, 15, 1, 65554, 15, 2, 65555, 7, 65536, 131072, 7, 65538, 131073, 15, 65536, 131074, 15, 65537, 131075, 15, 65537, 131076, 15, 65537, 131077, 15, 65537, 131078, 15, 65537, 131079, 15, 65537, 131080, 15, 65537, 131081, 15, 65537, 131082, 15, 65537, 131083, 15, 65537, 131084, 15, 65537, 131085, 15, 65537, 131086, 15, 65537, 131087, 15, 65537, 131088, 15, 65537, 131089, 15, 65537, 131090, 15, 65538, 131091, 7, 65536, 196608, 7, 65538, 196609, 15, 65536, 196610, 15, 65537, 196611, 15, 65537, 196612, 15, 65537, 196613, 15, 65537, 196614, 15, 65537, 196615, 15, 65537, 196616, 15, 65537, 196617, 15, 65537, 196618, 15, 65537, 196619, 6, 0, 196622, 15, 65537, 196623, 15, 65537, 196624, 15, 65537, 196625, 15, 65537, 196626, 15, 65538, 196627, 7, 65536, 262144, 7, 65538, 262145, 15, 65536, 262146, 15, 65537, 262147, 15, 65537, 262148, 15, 65537, 262149, 15, 65537, 262150, 15, 65537, 262151, 15, 65537, 262152, 15, 65537, 262153, 15, 65537, 262154, 15, 65537, 262155, 15, 65537, 262156, 15, 65537, 262157, 15, 65537, 262158, 15, 65537, 262159, 15, 65537, 262160, 15, 65537, 262161, 15, 65537, 262162, 15, 65538, 262163, 7, 65536, 327680, 7, 65538, 327681, 15, 65536, 327682, 15, 65537, 327683, 6, 0, 327686, 15, 65537, 327687, 15, 65537, 327688, 15, 65537, 327689, 15, 65537, 327690, 15, 65537, 327691, 15, 65537, 327692, 15, 65537, 327693, 15, 65537, 327694, 15, 65537, 327695, 15, 65537, 327696, 15, 65537, 327697, 15, 65537, 327698, 15, 65538, 327699, 7, 65536, 393216, 7, 65538, 393217, 15, 65536, 393218, 15, 65537, 393219, 15, 65537, 393220, 15, 65537, 393221, 15, 65537, 393222, 15, 65537, 393223, 15, 65537, 393224, 15, 65537, 393225, 15, 65537, 393226, 15, 65537, 393227, 15, 65537, 393228, 15, 65537, 393229, 15, 65537, 393230, 15, 65537, 393231, 15, 65537, 393232, 15, 65537, 393233, 15, 65537, 393234, 15, 65538, 393235, 7, 65536, 458752, 7, 65538, 458753, 15, 65536, 458754, 15, 65537, 458755, 15, 65537, 458756, 15, 65537, 458757, 15, 65537, 458758, 15, 65537, 458759, 15, 65537, 458760, 15, 65537, 458761, 15, 65537, 458762, 15, 65537, 458763, 15, 65537, 458764, 15, 65537, 458765, 15, 65537, 458766, 15, 65537, 458767, 15, 65537, 458768, 6, 0, 458771, 7, 65536, 524288, 7, 65538, 524289, 15, 65536, 524290, 15, 65537, 524291, 15, 65537, 524292, 15, 65537, 524293, 15, 65537, 524294, 15, 65537, 524295, 15, 65537, 524296, 15, 65537, 524297, 15, 65537, 524298, 15, 65537, 524299, 15, 65537, 524300, 15, 65537, 524301, 15, 65537, 524302, 15, 65537, 524303, 15, 65537, 524304, 15, 65537, 524305, 15, 65537, 524306, 15, 65538, 524307, 7, 65536, 589824, 7, 65538, 589825, 15, 65536, 589826, 15, 65537, 589827, 15, 65537, 589828, 15, 65537, 589829, 15, 65537, 589830, 15, 65537, 589831, 15, 65537, 589832, 15, 65537, 589833, 15, 65537, 589834, 15, 65537, 589835, 15, 65537, 589836, 15, 65537, 589837, 15, 65537, 589838, 15, 65537, 589839, 15, 65537, 589840, 15, 65537, 589841, 15, 65537, 589842, 15, 65538, 589843, 7, 65536, 655360, 7, 65538, 655361, 15, 65536, 655362, 15, 65537, 655363, 15, 65537, 655364, 15, 65537, 655365, 15, 65537, 655366, 15, 65537, 655367, 15, 65537, 655368, 15, 65537, 655369, 15, 65537, 655370, 15, 65537, 655371, 15, 65537, 655372, 15, 65537, 655373, 15, 65537, 655374, 15, 65537, 655375, 15, 65537, 655376, 15, 65537, 655377, 15, 65537, 655378, 15, 65538, 655379, 7, 65536, 720896, 7, 65538, 720897, 15, 65536, 720898, 15, 65537, 720899, 6, 0, 720902, 15, 65537, 720903, 15, 65537, 720904, 15, 65537, 720905, 15, 65537, 720906, 16, 2, 720907, 15, 65537, 720908, 15, 65537, 720909, 15, 65537, 720910, 15, 65537, 720911, 15, 65537, 720912, 15, 65537, 720913, 15, 65537, 720914, 15, 65538, 720915, 7, 65536, 786432, 7, 65538, 786433, 15, 65536, 786434, 15, 65537, 786435, 15, 65537, 786436, 15, 65537, 786437, 15, 65537, 786438, 15, 65537, 786439, 15, 65537, 786440, 15, 65537, 786441, 15, 65537, 786442, 16, 65538, 786443, 15, 65537, 786444, 15, 65537, 786445, 15, 65537, 786446, 15, 65537, 786447, 15, 65537, 786448, 15, 65537, 786449, 15, 65537, 786450, 15, 65538, 786451, 7, 65536, 851968, 7, 65538, 851969, 15, 65536, 851970, 15, 65537, 851971, 15, 65537, 851972, 15, 65537, 851973, 15, 65537, 851974, 6, 0, 851977, 15, 65537, 851978, 16, 65538, 851979, 15, 65537, 851980, 15, 65537, 851981, 15, 65537, 851982, 15, 65537, 851983, 15, 65537, 851984, 15, 65537, 851985, 15, 65537, 851986, 15, 65538, 851987, 7, 65536, 917504, 7, 65538, 917505, 15, 65536, 917506, 15, 65537, 917507, 15, 65537, 917508, 15, 65537, 917509, 15, 65537, 917510, 15, 65537, 917511, 15, 65537, 917512, 15, 65537, 917513, 16, 0, 917514, 16, 65538, 917515, 15, 65537, 917516, 15, 65537, 917517, 15, 65537, 917518, 15, 65537, 917519, 15, 65537, 917520, 15, 65537, 917521, 15, 65537, 917522, 15, 65538, 917523, 7, 65536, 983040, 7, 65538, 983041, 15, 131072, 983042, 15, 131073, 983043, 15, 131073, 983044, 15, 131073, 983045, 15, 131073, 983046, 15, 131073, 983047, 15, 131073, 983048, 15, 131073, 983049, 16, 65536, 983050, 16, 65538, 983051, 15, 131073, 983052, 15, 131073, 983053, 15, 131073, 983054, 15, 131073, 983055, 15, 131073, 983056, 15, 131073, 983057, 15, 131073, 983058, 15, 131074, 983059, 7, 65536, 1048576, 7, 65538, 1048577, 7, 0, 1048578, 7, 1, 1048579, 7, 1, 1048580, 7, 1, 1048581, 7, 1, 1048582, 7, 1, 1048583, 7, 1, 1048584, 7, 2, 1048585, 16, 65536, 1048586, 16, 65538, 1048587, 7, 0, 1048588, 7, 1, 1048589, 7, 1, 1048590, 7, 1, 1048591, 7, 1, 1048592, 7, 1, 1048593, 7, 1, 1048594, 7, 2, 1048595, 7, 65536, 1114112, 7, 65538, 1114113, 7, 131072, 1114114, 7, 131073, 1114115, 7, 131073, 1114116, 7, 131073, 1114117, 7, 131073, 1114118, 7, 131073, 1114119, 7, 131073, 1114120, 7, 131074, 1114121, 16, 65536, 1114122, 16, 65538, 1114123, 7, 131072, 1114124, 7, 131073, 1114125, 7, 131073, 1114126, 7, 131073, 1114127, 7, 131073, 1114128, 7, 131073, 1114129, 7, 131073, 1114130, 7, 131074, 1114131, 7, 65536, 1179648, 7, 65538, 1179649, 9, 0, 1179650, 9, 0, 1179651, 9, 0, 1179652, 9, 0, 1179653, 9, 0, 1179654, 9, 0, 1179655, 9, 0, 1179656, 9, 0, 1179657, 16, 65536, 1179658, 16, 65538, 1179659, 9, 0, 1179660, 9, 0, 1179661, 9, 0, 1179662, 9, 0, 1179663, 9, 0, 1179664, 9, 0, 1179665, 9, 0, 1179666, 9, 0, 1179667, 7, 65536, 1245184, 7, 65538, 1245193, 16, 131072, 1245194, 16, 65538, 1245203, 7, 65536, 1310720, 7, 65538, 1310721, 15, 0, 1310722, 15, 1, 1310723, 15, 1, 1310724, 15, 1, 1310725, 15, 1, 1310726, 15, 1, 1310727, 15, 1, 1310728, 15, 1, 1310729, 15, 65537, 1310730, 16, 65538, 1310731, 15, 1, 1310732, 15, 1, 1310733, 15, 1, 1310734, 15, 1, 1310735, 15, 1, 1310736, 15, 1, 1310737, 15, 1, 1310738, 15, 2, 1310739, 7, 65536, 1376256, 7, 65538, 1376257, 15, 65536, 1376258, 15, 65537, 1376259, 15, 65537, 1376260, 15, 65537, 1376261, 15, 65537, 1376262, 15, 65537, 1376263, 15, 65537, 1376264, 15, 65537, 1376265, 15, 65537, 1376266, 16, 65538, 1376267, 15, 65537, 1376268, 6, 0, 1376271, 15, 65537, 1376272, 15, 65537, 1376273, 15, 65537, 1376274, 15, 65538, 1376275, 7, 65536, 1441792, 7, 65538, 1441793, 15, 65536, 1441794, 15, 65537, 1441795, 15, 65537, 1441796, 15, 65537, 1441797, 15, 65537, 1441798, 15, 65537, 1441799, 15, 65537, 1441800, 15, 65537, 1441801, 15, 65537, 1441802, 16, 65538, 1441803, 15, 65537, 1441804, 15, 65537, 1441805, 15, 65537, 1441806, 15, 65537, 1441807, 15, 65537, 1441808, 15, 65537, 1441809, 15, 65537, 1441810, 15, 65538, 1441811, 7, 65536, 1507328, 7, 65538, 1507329, 15, 65536, 1507330, 15, 65537, 1507331, 15, 65537, 1507332, 15, 65537, 1507333, 6, 0, 1507336, 15, 65537, 1507337, 16, 0, 1507338, 16, 65538, 1507339, 15, 65537, 1507340, 15, 65537, 1507341, 15, 65537, 1507342, 15, 65537, 1507343, 15, 65537, 1507344, 15, 65537, 1507345, 15, 65537, 1507346, 15, 65538, 1507347, 7, 65536, 1572864, 7, 65538, 1572865, 15, 65536, 1572866, 15, 65537, 1572867, 15, 65537, 1572868, 15, 65537, 1572869, 15, 65537, 1572870, 15, 65537, 1572871, 15, 65537, 1572872, 15, 65537, 1572873, 16, 65536, 1572874, 16, 65538, 1572875, 15, 65537, 1572876, 15, 65537, 1572877, 15, 65537, 1572878, 15, 65537, 1572879, 14, 0, 1572880, 14, 0, 1572881, 15, 65537, 1572882, 15, 65538, 1572883, 7, 65536, 1638400, 7, 65538, 1638401, 15, 65536, 1638402, 15, 65537, 1638403, 15, 65537, 1638404, 15, 65537, 1638405, 15, 65537, 1638406, 15, 65537, 1638407, 15, 65537, 1638408, 15, 65537, 1638409, 16, 65536, 1638410, 16, 65538, 1638411, 15, 65537, 1638412, 15, 65537, 1638413, 15, 65537, 1638414, 15, 65537, 1638415, 6, 0, 1638418, 15, 65538, 1638419, 7, 65536, 1703936, 7, 65538, 1703937, 6, 0, 1703940, 15, 65537, 1703941, 15, 65537, 1703942, 15, 65537, 1703943, 15, 65537, 1703944, 15, 65537, 1703945, 16, 65536, 1703946, 16, 65538, 1703947, 15, 65537, 1703948, 15, 65537, 1703949, 15, 65537, 1703950, 15, 65537, 1703951, 14, 0, 1703952, 14, 0, 1703953, 15, 65537, 1703954, 15, 65538, 1703955, 7, 65536, 1769472, 7, 65538, 1769473, 15, 65536, 1769474, 15, 65537, 1769475, 15, 65537, 1769476, 15, 65537, 1769477, 15, 65537, 1769478, 15, 65537, 1769479, 15, 65537, 1769480, 15, 65537, 1769481, 16, 65536, 1769482, 16, 65538, 1769483, 15, 65537, 1769484, 15, 65537, 1769485, 6, 0, 1769488, 15, 65537, 1769489, 15, 65537, 1769490, 15, 65538, 1769491, 7, 65536, 1835008, 7, 65538, 1835009, 15, 65536, 1835010, 15, 65537, 1835011, 14, 0, 1835012, 14, 0, 1835013, 15, 65537, 1835014, 15, 65537, 1835015, 15, 65537, 1835016, 15, 65537, 1835017, 16, 65536, 1835018, 16, 65538, 1835019, 15, 65537, 1835020, 15, 65537, 1835021, 15, 65537, 1835022, 15, 65537, 1835023, 15, 65537, 1835024, 15, 65537, 1835025, 15, 65537, 1835026, 15, 65538, 1835027, 7, 65536, 1900544, 7, 65538, 1900545, 15, 65536, 1900546, 15, 65537, 1900547, 14, 0, 1900548, 14, 0, 1900549, 14, 0, 1900550, 15, 65537, 1900551, 15, 65537, 1900552, 15, 65537, 1900553, 16, 65536, 1900554, 16, 65538, 1900555, 15, 65537, 1900556, 15, 65537, 1900557, 15, 65537, 1900558, 15, 65537, 1900559, 15, 65537, 1900560, 15, 65537, 1900561, 15, 65537, 1900562, 15, 65538, 1900563, 7, 65536, 1966080, 7, 65538, 1966081, 15, 65536, 1966082, 15, 65537, 1966083, 14, 0, 1966084, 14, 0, 1966085, 14, 0, 1966086, 15, 65537, 1966087, 15, 65537, 1966088, 15, 65537, 1966089, 16, 65536, 1966090, 16, 65538, 1966091, 15, 65537, 1966092, 15, 65537, 1966093, 15, 65537, 1966094, 15, 65537, 1966095, 15, 65537, 1966096, 15, 65537, 1966097, 15, 65537, 1966098, 15, 65538, 1966099, 7, 65536, 2031616, 7, 65538, 2031617, 15, 65536, 2031618, 15, 65537, 2031619, 14, 0, 2031620, 14, 0, 2031621, 6, 0, 2031624, 15, 65537, 2031625, 16, 65536, 2031626, 16, 65538, 2031627, 15, 65537, 2031628, 15, 65537, 2031629, 15, 65537, 2031630, 15, 65537, 2031631, 6, 0, 2031634, 15, 65538, 2031635, 7, 65536, 2097152, 7, 65538, 2097153, 15, 65536, 2097154, 15, 65537, 2097155, 15, 65537, 2097156, 14, 0, 2097157, 14, 0, 2097158, 15, 65537, 2097159, 15, 65537, 2097160, 15, 65537, 2097161, 16, 65536, 2097162, 16, 65538, 2097163, 15, 65537, 2097164, 15, 65537, 2097165, 15, 65537, 2097166, 15, 65537, 2097167, 15, 65537, 2097168, 15, 65537, 2097169, 15, 65537, 2097170, 15, 65538, 2097171, 7, 65536, 2162688, 7, 65538, 2162689, 15, 131072, 2162690, 15, 131073, 2162691, 15, 131073, 2162692, 15, 131073, 2162693, 15, 131073, 2162694, 15, 131073, 2162695, 15, 131073, 2162696, 15, 131073, 2162697, 16, 65536, 2162698, 16, 65538, 2162699, 15, 131073, 2162700, 15, 131073, 2162701, 15, 131073, 2162702, 15, 131073, 2162703, 15, 131073, 2162704, 15, 131073, 2162705, 15, 131073, 2162706, 15, 131074, 2162707, 7, 65536, 2228224, 7, 65538, 2228225, 7, 0, 2228226, 7, 1, 2228227, 7, 1, 2228228, 7, 1, 2228229, 7, 1, 2228230, 7, 1, 2228231, 7, 1, 2228232, 7, 2, 2228233, 16, 65536, 2228234, 16, 131074, 2228235, 7, 0, 2228236, 7, 1, 2228237, 7, 1, 2228238, 7, 1, 2228239, 7, 1, 2228240, 7, 1, 2228241, 7, 1, 2228242, 7, 2, 2228243, 7, 65536, 2293760, 7, 65538, 2293761, 7, 131072, 2293762, 7, 131073, 2293763, 7, 131073, 2293764, 7, 131073, 2293765, 7, 131073, 2293766, 7, 131073, 2293767, 7, 131073, 2293768, 7, 131074, 2293769, 16, 65536, 2293770, 15, 65537, 2293771, 7, 131072, 2293772, 7, 131073, 2293773, 7, 131073, 2293774, 7, 131073, 2293775, 7, 131073, 2293776, 7, 131073, 2293777, 7, 131073, 2293778, 7, 131074, 2293779, 7, 65536, 2359296, 7, 65538, 2359297, 9, 0, 2359298, 9, 0, 2359299, 9, 0, 2359300, 9, 0, 2359301, 9, 0, 2359302, 9, 0, 2359303, 9, 0, 2359304, 9, 0, 2359305, 16, 65536, 2359306, 15, 65537, 2359307, 9, 0, 2359308, 9, 0, 2359309, 9, 0, 2359310, 9, 0, 2359311, 9, 0, 2359312, 9, 0, 2359313, 9, 0, 2359314, 9, 0, 2359315, 7, 65536, 2424832, 7, 65538, 2424841, 16, 65536, 2424842, 16, 2, 2424851, 7, 65536, 2490368, 7, 65538, 2490369, 15, 0, 2490370, 15, 1, 2490371, 15, 1, 2490372, 15, 1, 2490373, 15, 1, 2490374, 15, 1, 2490375, 15, 1, 2490376, 15, 1, 2490377, 16, 131072, 2490378, 16, 65538, 2490379, 15, 1, 2490380, 15, 1, 2490381, 15, 1, 2490382, 15, 1, 2490383, 15, 1, 2490384, 15, 1, 2490385, 15, 1, 2490386, 15, 2, 2490387, 7, 65536, 2555904, 7, 65538, 2555905, 15, 65536, 2555906, 15, 65537, 2555907, 15, 65537, 2555908, 15, 65537, 2555909, 15, 65537, 2555910, 15, 65537, 2555911, 15, 65537, 2555912, 15, 65537, 2555913, 15, 65537, 2555914, 16, 65538, 2555915, 15, 65537, 2555916, 15, 65537, 2555917, 15, 65537, 2555918, 15, 65537, 2555919, 15, 65537, 2555920, 15, 65537, 2555921, 15, 65537, 2555922, 15, 65538, 2555923, 7, 65536, 2621440, 7, 65538, 2621441, 15, 65536, 2621442, 15, 65537, 2621443, 15, 65537, 2621444, 15, 65537, 2621445, 15, 65537, 2621446, 6, 0, 2621449, 15, 65537, 2621450, 16, 65538, 2621451, 15, 65537, 2621452, 15, 65537, 2621453, 15, 65537, 2621454, 15, 65537, 2621455, 15, 65537, 2621456, 15, 65537, 2621457, 15, 65537, 2621458, 15, 65538, 2621459, 7, 65536, 2686976, 7, 65538, 2686977, 6, 0, 2686980, 15, 65537, 2686981, 15, 65537, 2686982, 15, 65537, 2686983, 15, 65537, 2686984, 15, 65537, 2686985, 15, 65537, 2686986, 16, 65538, 2686987, 15, 65537, 2686988, 15, 65537, 2686989, 15, 65537, 2686990, 15, 65537, 2686991, 6, 0, 2686994, 15, 65538, 2686995, 7, 65536, 2752512, 7, 65538, 2752513, 15, 65536, 2752514, 15, 65537, 2752515, 15, 65537, 2752516, 15, 65537, 2752517, 15, 65537, 2752518, 15, 65537, 2752519, 15, 65537, 2752520, 15, 65537, 2752521, 16, 0, 2752522, 16, 65538, 2752523, 15, 65537, 2752524, 15, 65537, 2752525, 6, 0, 2752528, 15, 65537, 2752529, 15, 65537, 2752530, 15, 65538, 2752531, 7, 65536, 2818048, 7, 65538, 2818049, 15, 65536, 2818050, 15, 65537, 2818051, 15, 65537, 2818052, 15, 65537, 2818053, 15, 65537, 2818054, 15, 65537, 2818055, 15, 65537, 2818056, 15, 65537, 2818057, 16, 65536, 2818058, 16, 65538, 2818059, 15, 65537, 2818060, 15, 65537, 2818061, 15, 65537, 2818062, 15, 65537, 2818063, 15, 65537, 2818064, 15, 65537, 2818065, 15, 65537, 2818066, 15, 65538, 2818067, 7, 65536, 2883584, 7, 65538, 2883585, 15, 65536, 2883586, 15, 65537, 2883587, 6, 0, 2883590, 15, 65537, 2883591, 15, 65537, 2883592, 15, 65537, 2883593, 16, 65536, 2883594, 16, 65538, 2883595, 15, 65537, 2883596, 15, 65537, 2883597, 15, 65537, 2883598, 6, 0, 2883601, 15, 65537, 2883602, 15, 65538, 2883603, 7, 65536, 2949120, 7, 65538, 2949121, 15, 65536, 2949122, 15, 65537, 2949123, 15, 65537, 2949124, 15, 65537, 2949125, 6, 0, 2949128, 15, 65537, 2949129, 16, 65536, 2949130, 16, 65538, 2949131, 15, 65537, 2949132, 15, 65537, 2949133, 15, 65537, 2949134, 15, 65537, 2949135, 15, 65537, 2949136, 15, 65537, 2949137, 15, 65537, 2949138, 15, 65538, 2949139, 7, 65536, 3014656, 7, 65538, 3014657, 15, 65536, 3014658, 15, 65537, 3014659, 15, 65537, 3014660, 15, 65537, 3014661, 15, 65537, 3014662, 15, 65537, 3014663, 15, 65537, 3014664, 15, 65537, 3014665, 16, 65536, 3014666, 16, 65538, 3014667, 15, 65537, 3014668, 15, 65537, 3014669, 15, 65537, 3014670, 15, 65537, 3014671, 15, 65537, 3014672, 15, 65537, 3014673, 15, 65537, 3014674, 15, 65538, 3014675, 7, 65536, 3080192, 7, 65538, 3080193, 15, 65536, 3080194, 15, 65537, 3080195, 15, 65537, 3080196, 15, 65537, 3080197, 15, 65537, 3080198, 15, 65537, 3080199, 15, 65537, 3080200, 15, 65537, 3080201, 16, 65536, 3080202, 16, 65538, 3080203, 15, 65537, 3080204, 15, 65537, 3080205, 15, 65537, 3080206, 15, 65537, 3080207, 15, 65537, 3080208, 6, 0, 3080211, 7, 65536, 3145728, 7, 65538, 3145729, 15, 65536, 3145730, 15, 65537, 3145731, 6, 0, 3145734, 15, 65537, 3145735, 15, 65537, 3145736, 15, 65537, 3145737, 16, 65536, 3145738, 16, 131074, 3145739, 6, 0, 3145742, 15, 65537, 3145743, 15, 65537, 3145744, 15, 65537, 3145745, 15, 65537, 3145746, 15, 65538, 3145747, 7, 65536, 3211264, 7, 65538, 3211265, 15, 65536, 3211266, 15, 65537, 3211267, 15, 65537, 3211268, 15, 65537, 3211269, 15, 65537, 3211270, 15, 65537, 3211271, 15, 65537, 3211272, 15, 65537, 3211273, 16, 65536, 3211274, 15, 65537, 3211275, 15, 65537, 3211276, 15, 65537, 3211277, 15, 65537, 3211278, 15, 65537, 3211279, 15, 65537, 3211280, 15, 65537, 3211281, 15, 65537, 3211282, 15, 65538, 3211283, 7, 65536, 3276800, 7, 65538, 3276801, 15, 65536, 3276802, 15, 65537, 3276803, 15, 65537, 3276804, 15, 65537, 3276805, 15, 65537, 3276806, 15, 65537, 3276807, 15, 65537, 3276808, 15, 65537, 3276809, 16, 65536, 3276810, 16, 2, 3276811, 15, 65537, 3276812, 15, 65537, 3276813, 15, 65537, 3276814, 15, 65537, 3276815, 15, 65537, 3276816, 15, 65537, 3276817, 15, 65537, 3276818, 15, 65538, 3276819, 7, 65536, 3342336, 7, 65538, 3342337, 15, 65536, 3342338, 6, 0, 3342341, 6, 0, 3342344, 15, 65537, 3342345, 16, 131072, 3342346, 16, 65538, 3342347, 15, 65537, 3342348, 15, 65537, 3342349, 15, 65537, 3342350, 6, 0, 3342353, 15, 65537, 3342354, 15, 65538, 3342355, 7, 65536, 3407872, 7, 65538, 3407873, 15, 65536, 3407874, 15, 65537, 3407875, 15, 65537, 3407876, 15, 65537, 3407877, 15, 65537, 3407878, 15, 65537, 3407879, 15, 65537, 3407880, 15, 65537, 3407881, 15, 65537, 3407882, 16, 65538, 3407883, 15, 65537, 3407884, 15, 65537, 3407885, 15, 65537, 3407886, 15, 65537, 3407887, 15, 65537, 3407888, 15, 65537, 3407889, 15, 65537, 3407890, 15, 65538, 3407891, 7, 65536, 3473408, 7, 65538, 3473409, 15, 131072, 3473410, 15, 131073, 3473411, 15, 131073, 3473412, 15, 131073, 3473413, 15, 131073, 3473414, 15, 131073, 3473415, 15, 131073, 3473416, 15, 131073, 3473417, 16, 0, 3473418, 16, 65538, 3473419, 15, 131073, 3473420, 15, 131073, 3473421, 15, 131073, 3473422, 15, 131073, 3473423, 15, 131073, 3473424, 15, 131073, 3473425, 15, 131073, 3473426, 15, 131074, 3473427, 7, 65536, 3538944, 10, 65536, 3538945, 7, 1, 3538946, 7, 1, 3538947, 7, 1, 3538948, 7, 1, 3538949, 7, 1, 3538950, 7, 1, 3538951, 7, 1, 3538952, 7, 1, 3538953, 7, 1, 3538954, 7, 1, 3538955, 7, 1, 3538956, 7, 1, 3538957, 7, 1, 3538958, 7, 1, 3538959, 7, 1, 3538960, 7, 1, 3538961, 7, 1, 3538962, 7, 1, 3538963, 10, 65537 )
script = ExtResource( 2 )

[node name="tilemap_snowy_lands_decor" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 16, 16 )
cell_y_sort = true
collision_layer = 8
collision_mask = 0
format = 1
tile_data = PoolIntArray( 196619, 1, 0, 327683, 1, 0, 458768, 1, 0, 720899, 1, 0, 851974, 1, 0, 1376268, 1, 0, 1507333, 1, 0, 1638415, 1, 0, 1703937, 1, 0, 1769485, 1, 0, 2031621, 1, 0, 2031631, 1, 0, 2621446, 1, 0, 2686977, 1, 0, 2686991, 1, 0, 2752525, 1, 0, 2883587, 1, 0, 2883598, 1, 0, 2949125, 1, 0, 3080208, 1, 0, 3145731, 1, 0, 3145739, 1, 0, 3342338, 1, 0, 3342341, 1, 0, 3342350, 1, 0 )

[node name="node_minions" type="Node2D" parent="tilemap_snowy_lands_decor"]

[node name="obj_dungeon_door" parent="tilemap_snowy_lands_decor" instance=ExtResource( 4 )]
position = Vector2( 160, 584 )

[node name="obj_dungeon_door2" parent="tilemap_snowy_lands_decor" instance=ExtResource( 4 )]
position = Vector2( 160, 288 )

[node name="entity_mc" parent="tilemap_snowy_lands_decor" instance=ExtResource( 5 )]
position = Vector2( 160, 848 )

[node name="light_mc" type="Light2D" parent="tilemap_snowy_lands_decor/entity_mc"]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 6 )

[node name="node_stage_one_spawn" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 80, 648 )

[node name="1" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 216, 656 )

[node name="2" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 56, 736 )

[node name="3" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 104, 768 )

[node name="4" type="Position2D" parent="node_stage_one_spawn"]
position = Vector2( 240, 760 )

[node name="node_stage_two_spawn" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 64, 480 )

[node name="1" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 56, 376 )

[node name="2" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 272, 352 )

[node name="3" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 280, 440 )

[node name="4" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 136, 360 )

[node name="5" type="Position2D" parent="node_stage_two_spawn"]
position = Vector2( 184, 432 )

[node name="node_stage_three_spawn" type="Node2D" parent="."]

[node name="0" type="Position2D" parent="node_stage_three_spawn"]
position = Vector2( 56, 120 )

[node name="1" type="Position2D" parent="node_stage_three_spawn"]
position = Vector2( 48, 216 )

[node name="2" type="Position2D" parent="node_stage_three_spawn"]
position = Vector2( 136, 48 )

[node name="3" type="Position2D" parent="node_stage_three_spawn"]
position = Vector2( 248, 48 )

[node name="4" type="Position2D" parent="node_stage_three_spawn"]
position = Vector2( 272, 168 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.352941, 0.352941, 0.352941, 1 )
